@@ -5,7 +5,11 @@ indicates the contributor was also the author of the fix; Thanks!
 
 * Verilog::Language 3.00***
 
-****	Fix vrename breakage in 3.00* releases.  [David Price]
+***	Fix vrename breakage in 3.00* releases.  [David Price]
+
+****	Fix SigParser::comment to call Parser::Comment. [Mark Nodine]
+
+****	Fix Parser::unreadback to always return value. [Mark Nodine]
 
 * Verilog::Language 3.001 2007/06/20
 
